--- a/docs/src/css/nav-group.css
+++ b/docs/src/css/nav-group.css
@@ -1,5 +1,4 @@
 .NavGroup {
-
   & a {
     display: block;
     font-size: 14px;
@@ -13,14 +12,39 @@
       background-color: var(--neutral-5A);
     }
 
-    &:active {
+    &:active,
+    &.is-active {
       background-color: var(--blue-10A);
       color: var(--blue-500);
     }
   }
 }
 
-
 .NavGroup-title {
   margin-bottom: 8px;
+
+  @media (--range-palm) {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: -0.2px;
+    margin-bottom: 16px;
+    margin-top: 16px;
+  }
+  @media (--range-hand) {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: -0.2px;
+    margin-bottom: 16px;
+    margin-top: 16px;
+  }
+  @media (--range-lap) {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28px;
+    letter-spacing: -0.2px;
+    margin-bottom: 16px;
+    margin-top: 16px;
+  }
 }
