--- a/docs/src/css/component-readme.css
+++ b/docs/src/css/component-readme.css
@@ -1,28 +1,60 @@
 .ComponentReadme {
-
 }
 
 .ComponentReadme-inner {
-  width: 620px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
 }
 
 .ComponentReadme-title {
-  font-size: 28px;
+  font-size: 32px;
   font-weight: 400;
-  line-height: 28px;
+  line-height: 32px;
   letter-spacing: -0.2px;
   margin-bottom: 4px;
 }
 
 .ComponentReadme-subtitle {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 300;
   line-height: 28px;
 }
 
+.ComponentReadme-header {
+  border-bottom: 1px solid var(--neutral-20A);
+  /* padding-bottom: 16px; */
+  margin-bottom: 24px;
+
+  & dl {
+    font-size: 14px;
+    margin-top: 16px;
+    margin-bottom: px;
+
+    & dt {
+      color: var(--neutral-200);
+      width: 72px;
+      display: inline-block;
+    }
+
+    & dd {
+      width: calc(100% - 72px);
+      margin-left: 0;
+      margin-bottom: 16px;
+      display: inline-block;
+
+      & a {
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
+/**
+ * Not used atm
+ */
 .ComponentReadme-nav {
   margin-top: 16px;
   border-bottom: 1px solid var(--neutral-20A);
@@ -38,7 +70,7 @@
       color: var(--neutral-800);
     }
 
-    &[aria-selected="true"] {
+    &[aria-selected='true'] {
       color: var(--neutral-800);
       box-shadow: 0 1px var(--neutral-100);
     }
