--- a/docs/src/css/index.css
+++ b/docs/src/css/index.css
@@ -1,15 +1,23 @@
-@import "./colors.css";
-@import "./variables.css";
-@import "./reset.css";
-@import "./media-ranges.css";
+@import './colors.css';
+@import './variables.css';
+@import './reset.css';
+@import './media-ranges.css';
 
 /* html + body styling */
-@import "./global.css";
+@import './global.css';
 
 /* Quick and dirty CSS */
-@import "./scratch.css";
+@import './scratch.css';
 
 /* components */
-@import "./top-bar.css";
-@import "./nav-group.css";
-@import "./component-readme.css";
+@import './top-bar.css';
+@import './nav-group.css';
+@import './component-readme.css';
+@import './playground.css';
+@import './prism-theme.css';
+@import './content.css';
+@import './container.css';
+@import './home.css';
+@import './main-layout.css';
+@import './prop-type-table.css';
+@import './appearance-option.css';
