--- a/docs/src/css/top-bar.css
+++ b/docs/src/css/top-bar.css
@@ -1,36 +1,83 @@
 .TopBar {
-  box-shadow: var(--elevation-1);
-  /*border-bottom: 1px solid var(--color-border-default);*/
   z-index: 1;
   height: 56px;
   display: flex;
   align-items: center;
   padding-left: 16px;
   padding-right: 16px;
-}
-
-
-.TopBar-nav {
-  margin-left: 24px;
-  margin-top: -2px;
   position: relative;
 
-  & a {
-    color: var(--neutral-500);
-    text-transform: uppercase;
-    font-size: 12px;
-    padding: 10px 12px;
-    margin-right: 2px;
-    letter-spacing: 0.4px;
+  @media (--range-palm) {
+    height: 52px;
+  }
 
-    &:hover {
-      background-color: var(--neutral-7A);
-      border-radius: 3px;
+  @media (--range-palm), (--range-hand), (--range-lap) {
+    box-shadow: var(--elevation-0);
+  }
+
+  @media (--range-desk) {
+    box-shadow: var(--elevation-1);
+  }
+}
+
+.TopBar-nav {
+  position: relative;
+  flex: 1;
+
+  @media (--range-palm), (--range-hand) {
+    margin-left: 12px;
+  }
+
+  @media (--range-lap), (--range-desk) {
+    margin-left: 24px;
+  }
+}
+
+.TopBar-navRight {
+}
+
+.TopBar-link {
+  color: var(--neutral-500);
+  text-transform: uppercase;
+  font-size: 12px;
+  padding: 10px 12px;
+  margin-right: 2px;
+  height: 36px;
+  display: inline-flex;
+  align-items: center;
+  letter-spacing: 0.4px;
+
+  &:hover {
+    background-color: var(--neutral-7A);
+    border-radius: 3px;
+  }
+
+  &:active,
+  &.is-active {
+    background-color: var(--blue-7A);
+    color: var(--blue-500);
+  }
+
+  & .icon-holder {
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    margin-top: -2px;
+
+    & + span {
+      margin-left: 8px;
+    }
+  }
+
+  @media (--range-palm) {
+    height: 32px;
+
+    & .hide-on-mobile {
+      display: none;
     }
 
-    &:active {
-      background-color: var(--blue-7A);
-      color: var(--blue-500);
+    & .icon-holder + .hide-on-mobile {
+      margin-left: 0px;
     }
   }
 }
