--- a/docs/src/css/content.css
+++ b/docs/src/css/content.css
@@ -14,8 +14,13 @@
 
   & a {
     color: var(--blue-500);
+
     &:hover {
       text-decoration: underline;
+    }
+
+    &:focus {
+      outline: 1px solid var(--blue-500);
     }
   }
 
@@ -67,14 +72,34 @@
     }
   }
 
+  & p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+  & li {
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+  }
+
   & p,
   & li {
     font-size: 14px;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: -0.05px;
+  }
+
+  & blockquote {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: -0.05px;
     margin-top: 1em;
     margin-bottom: 1em;
+    border-left: 2px solid var(--green-100A);
+    padding: 12px;
+    background-color: var(--green-7A);
   }
 
   & strong {
