--- a/docs/src/css/nav-group.css
+++ b/docs/src/css/nav-group.css
@@ -12,6 +12,10 @@
       background-color: var(--neutral-5A);
     }
 
+    &:focus {
+      box-shadow: inset 0 0 0 1px var(--blue-100A);
+    }
+
     &:active,
     &.is-active {
       background-color: var(--blue-10A);
