--- a/docs/src/css/prop-type-table.css
+++ b/docs/src/css/prop-type-table.css
@@ -22,6 +22,23 @@
 }
 
 .PropTypeHeading-propType {
+  background-color: var(--neutral-7A);
+  color: var(--neutral-800);
+  border-radius: 2px;
+  font-weight: 500;
+  padding: 2px 4px;
+}
+
+.PropTypeHeading-arrayOf {
+  margin-left: 12px;
+  background-color: var(--neutral-7A);
+  color: var(--neutral-800);
+  border-radius: 2px;
+  font-weight: 500;
+  padding: 2px 4px;
+}
+
+.PropTypeHeading-name {
   font-family: var(--font-mono);
   background-color: var(--turquoise-15A);
   color: var(--turquoise-1000);
@@ -29,14 +46,6 @@
   font-weight: 500;
   padding: 2px 4px;
   margin-right: 12px;
-}
-
-.PropTypeHeading-name {
-  background-color: var(--neutral-7A);
-  color: var(--neutral-800);
-  border-radius: 2px;
-  font-weight: 500;
-  padding: 2px 4px;
 }
 
 .PropTypeHeading-defaultValue {
